Small space adjustments

--- a/latex/multiple-language-copyright.tex
+++ b/latex/multiple-language-copyright.tex
@@ -116,6 +116,7 @@
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+\hspace{.25em plus 1em}%
 {\gitabbrcommithash}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -266,6 +267,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\gitabbrcommithash}
+\hspace{.25em plus 1em}%
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
