Use monospace font for git abbr commit hashes

--- a/latex/multiple-language-copyright.tex
+++ b/latex/multiple-language-copyright.tex
@@ -117,7 +117,7 @@
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 \hspace{.25em plus 1em}%
-{\gitabbrcommithash}
+\texttt{{\gitabbrcommithash}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -141,7 +141,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 퀙스 시스템과 기술.
 Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 Qugh pat je cham.
-{\gitabbrcommithash}
+\texttt{{\gitabbrcommithash}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -163,7 +163,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 퀙스 시스템과 기술.
 Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 Qugh pat je cham.
-{\gitabbrcommithash}
+\texttt{{\gitabbrcommithash}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -185,7 +185,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 퀙스 시스템과 기술.
 Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 Qugh pat je cham.
-{\gitabbrcommithash}
+\texttt{{\gitabbrcommithash}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -207,7 +207,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 퀙스 시스템과 기술.
 Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 Qugh pat je cham.
-{\gitabbrcommithash}
+\texttt{{\gitabbrcommithash}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -229,7 +229,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 퀙스 시스템과 기술.
 Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 Qugh pat je cham.
-{\gitabbrcommithash}
+\texttt{{\gitabbrcommithash}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -251,7 +251,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 퀙스 시스템과 기술.
 Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 Qugh pat je cham.
-{\gitabbrcommithash}
+\texttt{{\gitabbrcommithash}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -266,7 +266,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025, \textsc{Quux} Sistema y Tecnología.
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-{\gitabbrcommithash}
+\texttt{{\gitabbrcommithash}}
 \hspace{.25em plus 1em}%
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
