--- a/latex/multiple-language-copyright.tex
+++ b/latex/multiple-language-copyright.tex
@@ -117,7 +117,7 @@
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 \hspace{.25em plus 1em}%
-\texttt{{\gitabbrcommithash}}
+*\texttt{{\gitabbrcommithash}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -141,7 +141,29 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 퀙스 시스템과 기술.
 Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 Qugh pat je cham.
-\texttt{{\gitabbrcommithash}}
+\dag\texttt{{\gitabbrcommithash}}
+Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+	2023--2025 \textsc{Quux} System and Technology.
+版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+	2023--2025 餛飩系統與科技.
+版权所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+	2023--2025 馄饨系统与科技.
+Droits d'auteur {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
+	2023--2025 \textsc{Quux} Système et Technologie.
+Urheberrecht {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
+	2023--2025, \textsc{Quux} System und Technologie.
+Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
+	2023--2025, \textsc{Quux} Sistema y Tecnología.
+\foreignlanguage{russian}{Авторское право} %
+	{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+	2023–2025 \foreignlanguage{russian}{Квукс Система и Технология.}
+著作権~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+	2023--2025 クークスシステムとテクノロジー.
+저작권~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+	2023--2025 퀙스 시스템과 기술.
+Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
+	2023--2025 Qugh pat je cham.
+\ddag\texttt{{\gitabbrcommithash}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -229,29 +251,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 퀙스 시스템과 기술.
 Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025 Qugh pat je cham.
-\texttt{{\gitabbrcommithash}}
-Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 \textsc{Quux} System and Technology.
-版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 餛飩系統與科技.
-版权所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 馄饨系统与科技.
-Droits d'auteur {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
-	2023--2025 \textsc{Quux} Système et Technologie.
-Urheberrecht {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
-	2023--2025, \textsc{Quux} System und Technologie.
-Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
-	2023--2025, \textsc{Quux} Sistema y Tecnología.
-\foreignlanguage{russian}{Авторское право} %
-	{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023–2025 \foreignlanguage{russian}{Квукс Система и Технология.}
-著作権~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 クークスシステムとテクノロジー.
-저작권~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 퀙스 시스템과 기술.
-Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
-	2023--2025 Qugh pat je cham.
-\texttt{{\gitabbrcommithash}}
+\S\texttt{{\gitabbrcommithash}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -266,7 +266,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023--2025, \textsc{Quux} Sistema y Tecnología.
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-\texttt{{\gitabbrcommithash}}
+\P\texttt{{\gitabbrcommithash}}
 \hspace{.25em plus 1em}%
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
