Write pdfdate, pdfcreationdate, pdfmoddate, and pdfmetadate to the XMP metadata

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -81,6 +81,10 @@
 		pdfdoi={},
 		pdfidentifier={},
 		pdfbytes={3653600},
+		pdfdate={\pdfbuilddatealt},
+		pdfcreationdate={\pdfbuilddatealt},
+		pdfmoddate={\pdfbuilddatealt},
+		pdfmetadate={\pdfbuilddatealt},
 		pdfinfo={
 			GitCommitName={\gitcommitname},
 			GitCommitHash={\gitcommithash},
