Use \gitcommithash for pdfversionid

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -67,7 +67,7 @@
 			https://github.com/neo954/sichuan-cookbook
 		},
 		pdfdocumentid={uuid:fc7e6b8c-3f14-4f97-bfe0-8a12ac9cbb25},
-		pdfversionid={\gitcommitname},
+		pdfversionid={\gitcommithash},
 		pdfpublication={[en]Sichuan Cookbook},
 		pdfpublisher={Quux System and Technology},
 		pdfpubtype={book},
