--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -85,7 +85,7 @@
 			https://github.com/neo954/sichuan-cookbook
 		},
 		pdfdocumentid={uuid:a71e3a09-19e9-438a-b6f3-c15bf4e2308a},
-		pdfversionid={\gitcommitname},
+		pdfversionid={\gitcommithash},
 		pdfpublication={[en]Sichuan Cookbook},
 		pdfpublisher={Quux System and Technology},
 		pdfpubtype={book},
