Write pdfdate, pdfcreationdate, pdfmoddate, and pdfmetadate to the XMP metadata

--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -101,6 +101,10 @@
 		pdfpagerange={1},
 		pdfnumpages={1},
 		pdfbytes={168438},
+		pdfdate={\pdfbuilddatealt},
+		pdfcreationdate={\pdfbuilddatealt},
+		pdfmoddate={\pdfbuilddatealt},
+		pdfmetadate={\pdfbuilddatealt},
 		pdfinfo={
 			GitCommitName={\gitcommitname},
 			GitCommitHash={\gitcommithash},
