--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -149,7 +149,7 @@
 		pdfsubject={裏表紙、背表紙、表紙，塗り足し付き},
 		pdfcopyright={著作権 (c) 2023--2025 クークスシステムとテクノロジー}
 	}
-	\XMPLangAlt{kr}{
+	\XMPLangAlt{ko}{
 		pdftitle={사천 요리책 1972 리메이크: 책 표지},
 		pdfsubject={뒷표지，등표지，앞표지，트림 포함},
 		pdfcopyright={저작권 (c) 2023--2025 퀙스 시스템과 기술}
